force-app/main/default/objects/Ag_Opportunity__c/Ag_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Ag Opportunity</label>
    <nameField>
        <displayFormat>AGO-{000}</displayFormat>
        <label>Ag Opportunity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ag Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>