force-app/main/default/objects/Ag_Opportunity__c/fields/AG_Account__c.field-meta.xml
<CustomField>
    <fullName>AG_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ag Account</label>
    <referenceTo>Ag_Account__c</referenceTo>
    <relationshipLabel>Ag Opportunities</relationshipLabel>
    <relationshipName>Ag_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>