force-app/main/default/objects/Ag_Opportunity__c/fields/AG_Account_Amount__c.field-meta.xml
<CustomField>
    <fullName>AG_Account_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AG Account Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>